# NMPDE-Project

./: CMakeLists.txt  README.md  submission.sub
mesh/input_mesh/: paralepiped.geo.msh  paralepiped.msh
mesh/output_mesh/: output-mesh-cube-20_0.0.vtu  output-mesh-cube-20_0.1.vtu  output-mesh-cube-20_0.2.vtu  output-mesh-cube-20_0.3.vtu  output-mesh-cube-20_0.pvtu  output-mesh-cube-5_0.0.vtu  output-mesh-cube-5_0.1.vtu  output-mesh-cube-5_0.2.vtu  output-mesh-cube-5_0.3.vtu  output-mesh-cube-5_0.pvtu
results/: results.csv
scripts/: AMGSweepsCondNum.py  AMGSweepsTime.py  SSOROverlap.py  SSOROverlapCond.py  SSOROverlapTime.py  cond_number_vs_p_value.py  cond_number_vs_p_value.sh  condition_number_vs_spheres.py  condition_number_vs_spheres.sh  iterations_vs_p_value.py  iterations_vs_r.py  output-mesh-cube-20_0.0.vtu  output-mesh-cube-20_0.1.vtu  output-mesh-cube-20_0.2.vtu  output-mesh-cube-20_0.3.vtu  output-mesh-cube-20_0.pvtu  output-mesh-cube-40_0.pvtu  parallel_execution.sh  parameter_test.py  parameter_test.sh  time_vs_p.py  time_vs_processors.py
scripts/runs/: p_modified.txt  paralepiped-20.geo.txt
src/: Poisson3D.cpp  Poisson3D.hpp  Poisson3D_Parallel.cpp  Poisson3D_Parallel.hpp  Project.cpp  Project_Parallel.cpp
